--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale = 1.0">
 </head>
 <body>
+  <%= link_to "Home", root_path %>
+  <%= link_to "About Us", about_path %>
   <%= render 'layouts/header' %>
   <div class = "container">
     <%= yield %>
