--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,1 +1,9 @@
+$body-bg:                     #3498db;
+$navbar-inverse-bg:           #2980b9;
+$navbar-inverse-link-color:   white;
+$brand-primary:         #e74c3c;
+$jumbotron-bg:                #bdc3c7;
+
+
 @import 'bootstrap';
+
